metrics/prometheus/prompp/httproute-private/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-prompp-private
spec:
  hostnames:
  - prometheus-prompp-private.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: prom-prompp
      port: 9090
